--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,23 @@
 {
-    "version":2,
-    "builds":[
-        { "src" : ".js", "use":"@vercel/node"}
+    "version": 2,
+    "builds": [
+        {
+            "src": "package.json",
+            "use": "vercel-sapper"
+        },
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
         {
-            "src":"/(.*)",
-            "dest":"/"
+            "src": "/(.*)",
+            "dest": "server.js",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
         }
     ]
 }
